--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,14 @@ header{
 	position:fixed;
 	top:0;
 	z-index: 10;
-	background-color: white;
-	height:3em;
+	background-color: rgba(255,255,0,0.5);
+	height:4em;
 }
 
 .logo{
 	width: auto;
 	float: left;
+	margin-top: 0.25em;
 }
 
 nav {
@@ -24,7 +25,7 @@ nav a {
 	font-size: 1em;
 	letter-spacing: 2px;
 	color:black;
-	margin: 1em;
+	margin: 1.5em;
 	display: inline-block;
 	text-decoration: none;
 }
@@ -45,11 +46,57 @@ body{
 	height: 600px;
 	overflow: hidden;
 	position: fixed;*/
-	margin-top: 3em;
+	margin-top: 4em;
 }
 
 .banner img{
 	width: 100%;
+}
+
+.features {
+	width: 100%
+	display: block;
+	float:left;
+}
+
+.feature-box{
+	width: 45%;
+	margin: 1.5em 2.5%;
+	float: left;
+  /*float: none;*/
+  	display: block;
+  	position: relative;
+  	overflow: hidden;
+}
+
+.feature-box img {
+	width: 100%;
+}
+
+.label {
+  position: absolute;
+  top: 0;
+  width:100%;
+  text-align: center;
+  color: white;
+  /*background: black;*/
+  background-color: rgba(0, 173, 239, 0.75);
+  /* margin-top: 125px; */
+  vertical-align: middle;
+  padding: 22.2% 0;
+  opacity: 0;
+  margin:0;
+  font-family: PT Sans;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  transition:0.3s;
+}
+
+.feature-box:hover .label {
+  opacity:1;
+  transition:0.3s;
 }
 
 /*MOBILE*/
@@ -85,7 +132,6 @@ body{
 
 	.banner{
 		margin-top: 9em;
-	}
 	}
 
 }
