--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ body{
 	width: 100%;
 }
 
+/*FEATURES SECTION*/
 .features {
 	width: 100%
 	display: block;
@@ -97,6 +98,23 @@ body{
 .feature-box:hover .label {
   opacity:1;
   transition:0.3s;
+}
+
+/*EVENTS SECTION*/
+.events {
+	width: 100%
+	display: block;
+	float:left;
+	padding: 0 2.5%;
+}
+
+.events-grid{
+	width:25%;
+}
+
+.events-last {
+float:right;
+
 }
 
 /*MOBILE*/
