--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,71 @@ float:right;
 
 }
 
+/*FOOTER*/
+
+.footer{
+  width: 100%;
+  height: 100px;
+  font-size: 14px;
+  background-color: yellow;
+  z-index: 1;
+  position: relative;
+  color: white;
+  display: inline-block;
+  text-align: left;
+  margin-top: 3em
+}
+
+.footer img{
+	text-align: center;
+	float: none;
+	display: inline-block;
+}
+
+/*PRODUCTS*/
+
+.product-nav{
+	float:left;
+	margin-top: 6em;
+	margin-left: 2em;
+
+}
+
+.product-nav a{
+	display: block;
+
+}
+
+.product-nav p {
+	font-family: PT Sans;
+	text-transform: uppercase;
+	font-weight: 700;
+	border-bottom: 1px solid #ccc;
+	width:125%;
+	padding-bottom: 0.5em;
+	letter-spacing: 2px;
+}
+
+.nav-button{
+  text-decoration: none;
+  list-style: none;
+  border: 1px solid #E6E7E8;
+  width: 100%;
+  padding: 0.75em 1em;
+  text-align: center;
+  margin: 1em 0;
+  font-family: PT Sans;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2px;
+  font-size: 12px;
+  background-color:  #E6E7E8;
+  color: white;
+  transition:0.3s;
+  color:black;
+}
+
+
 /*MOBILE*/
 @media (max-width: 480px){
 
