--- a/css/main.css
+++ b/css/main.css
@@ -342,10 +342,34 @@ input:focus {
 
 /*DROP-DOWN MENU*/
 .drop-down{
-	position: relative;
+	position: relative;	
+	border: 1 solid #ccc;
+	border-radius: 0;
+	width: 50%;
+  	height: 2.5rem;
+  	line-height: 2.5rem;
+  	overflow: hidden;
+  	border: 1px solid #ccc;
+  	padding: 0 1rem;
 }
 
+select{
+	font-family: PT Sans;
+	text-transform: uppercase;
+	font-size: 0.75em;
+	letter-spacing: 3px;
+	text-align: center;
+	background-color: white;
+	border:0;
+	border-radius: 0;
+	margin: 0.5em;
+	transition: 0.5s;
+	width:100%;
+}
 
+select:focus {
+  outline:none;
+}
 
 
 /*MOBILE*/
