--- a/css/main.css
+++ b/css/main.css
@@ -208,8 +208,9 @@ input:focus {
 }
 
 /*PRODUCTS*/
-.multi-all{
+.multi-all, .item-all{
 	margin-top:4em;
+	height:auto;
 }
 
 .product-nav{
@@ -371,6 +372,105 @@ select:focus {
   outline:none;
 }
 
+/*VIEW ITEM*/
+.view-item{
+	display: inline;
+}
+
+.item-picture{
+	margin: 3em;
+	margin-left: 5em;
+	float:left;
+}
+
+.item-heading{
+	width: 60%;
+  height: auto;
+  float: right;
+}
+
+.item-header{
+  font-family: PT Sans;
+  font-weight: 700;
+  text-transform: uppercase;
+  color:black;
+  font-size: 2rem;
+  padding-bottom: 0.25em;
+  letter-spacing: 5px;
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 0;
+}
+
+.item-price{
+  font-family: PT Sans;
+  font-weight: 700;
+  text-transform: uppercase;
+  color:black;
+  font-size: 1.5rem;
+  padding-bottom: 0.25em;
+  letter-spacing: 5px;
+  display: block;
+  margin-top: 1em 0;
+}
+
+.item-subheader{
+  font-family: PT Sans;
+  text-decoration: uppercase;
+  text-transform: uppercase;
+  display: block;
+  margin:0;
+}
+
+.item-description{
+	font-family: Crimson Text;
+	line-height: 2em;
+	width: 80%;
+	font-size: 0.75em;
+	margin: 3em 0;
+}
+
+.button{
+  width: 50%;
+  float:left;
+  text-decoration: none;
+  list-style: none;
+  border: 1px solid #000000;
+  padding: 0.75em 1em;
+  text-align: center;
+  font-family: PT Sans;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2px;
+  font-size: 12px;
+  background-color: black;
+  color: white;
+  transition:0.3s;
+  display: block;
+}
+
+.button:hover{
+  background-color: #00ADEF;
+  border:1px solid #00ADEF;
+  transition:0.3s;
+}
+
+.quantity{
+	font-family: PT Sans;
+	text-transform: uppercase;
+	letter-spacing: 3px;
+	font-size: 0.75em;
+	margin: 0;
+}
+.item-quantity {
+	font-family: PT Sans;
+	 padding: 0.25rem;
+	 text-transform: uppercase;
+	 letter-spacing: 2px;
+	 width: 50%;
+	 margin-bottom: 2em;
+	 display: block;
+}
 
 /*MOBILE*/
 @media (max-width: 480px){
