--- a/css/grid.css
+++ b/css/grid.css
@@ -44,16 +44,8 @@
 	clear: both;
 }
 
+/*not necessary*/
 #staff-grid{
-	margin-top: 3rem;
+	margin-top: 2rem;
 }
 
-#staff-name{
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-
-#staff-intro{
-		padding: 1rem;
-
-	}
