--- a/css/main1.css
+++ b/css/main1.css
@@ -155,7 +155,7 @@ float:right;
 }
 
 /* Denise @*#&$(!*/
-	/*about page*/
+	
 	.crimson-text {
 		font-family: Crimson;
 		margin:0;
@@ -176,6 +176,7 @@ float:right;
 		font-family: PT Sans;
 	}
 
+/*about page*/
 	#meet-team{
 		height: 2em;
   		background-color: lightgray;
@@ -198,6 +199,30 @@ float:right;
 		padding: 1rem;
 
 	}
+
+/*event page*/
+
+	#upcoming-e{
+		text-align: center;
+		margin-top: 3rem;
+		margin-bottom: 2rem;
+	}
+
+	#event-place{
+		padding:0.5rem;
+		margin-left:auto;
+		margin-right:auto;
+	}
 	
+	.event-name{
+		font-family: PT Sans;
+  		font-size: 1.25rem;
+  		display: block;
+  		padding-top: 0.5rem;
+  		padding-bottom: 0.5rem;
+  		margin: 0;
+	}
+
+
 	
 
