--- a/css/main1.css
+++ b/css/main1.css
@@ -190,13 +190,19 @@ float:right;
 		max-height: auto;
 	}
 
-	#staff-name{
-		margin-top: 0.5rem;
-		margin-bottom: 0;
+	.staff-name{
+		font-family: PT Sans;
+  		font-size: 1.25rem;
+  		display: block;
+  		padding-top: 0.5rem;
+  		margin: 0;
+  		letter-spacing: 2px
 	}
 
+	
+
 	#staff-intro{
-		padding: 1rem;
+		padding: 0.5rem 2rem;
 
 	}
 
@@ -210,17 +216,16 @@ float:right;
 
 	#event-place{
 		padding:0.5rem;
-		margin-left:auto;
-		margin-right:auto;
 	}
 	
-	.event-name{
+	.event-name {
 		font-family: PT Sans;
   		font-size: 1.25rem;
   		display: block;
   		padding-top: 0.5rem;
   		padding-bottom: 0.5rem;
   		margin: 0;
+  		letter-spacing: 1px;
 	}
 
 
