added payment information section

--- a/css/product.css
+++ b/css/product.css
@@ -340,14 +340,33 @@ select:focus {
 .information{
   float: left;
   width: 50%;
-  height:60rem;
   margin-top: 4em;
   margin-left: 5%;
+  display: block;
 }
 
 .information-header{
 	margin-top: 1em;
 	margin-left: 2em;
+}
+
+.checkout-information{
+	display: block;
+	float: left;
+	width:100%;
+}
+
+.shipping{
+	float:left;
+	width: 100%;
+	height:20em;
+/*	background-color: yellow;*/
+
+}
+
+.payment{
+	float:left;
+	width: 100%;
 }
 
 .detail-header{
@@ -376,19 +395,20 @@ select:focus {
 	margin-left: 6em;
 	width:50%;
 	margin-top: 0.25em;
+	margin-bottom: 1.5em;
 	float:left;
 	font-family: PT Sans;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
 	padding: 0.30rem;
-	color: #B5B5B5;
 	 
 }
 
 #medium-detail{
 	margin-left: 6em;
 	margin-top: 0.25em;
+	margin-bottom: 1.5em;
 	width:30%;
 	display:inline;
 	float:left;
@@ -397,44 +417,48 @@ select:focus {
 	letter-spacing: 2px;
 	height: 1rem;
 	padding: 0.30rem;
-	color: #B5B5B5;
 }
 
 #small-detail{
 	margin-left: 0.5em;
 	margin-top: 0.25em;
+	margin-bottom: 1.5em;
 	width:17%;
-	display: inline;
-	float:left;
-		font-family: PT Sans;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	height: 1rem;
-	padding: 0.30rem;
-	color: #B5B5B5;
-}
-
-#half-detail{
-	margin-left: 0.5em;
-	margin-top: 0.3em;
-	width:23.5%;
 	display: inline;
 	float:left;
 	font-family: PT Sans;
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
-	line-height: 15px;
 	padding: 0.30rem;
-	color: #B5B5B5;
 }
 
-.half-detail2{
+#half-detail{
 	margin-left: 0.5em;
-	margin-top: 0.25em;
+	margin-top: 0.3em;
+	margin-bottom: 1.5em;
 	width:23.5%;
-	display: inline;
+	display: block;
 	float:left;
+	font-family: PT Sans;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	height: 1rem;
+	padding: 0.30rem;
+}
+
+#first-half-detail{
+	margin-left: 6em;
+	margin-top: 0.3em;
+	margin-bottom: 1.5em;
+	width:23.5%;
+	display: block;
+	float:left;
+	font-family: PT Sans;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	height: 1rem;
+	padding: 0.30rem;
 }
 
 .detail-country{
@@ -454,7 +478,25 @@ select:focus {
 	display: inline;
 	margin: 0.25;
 	margin-left:0;
-	color: #B5B5B5;
+}
+
+.detail-card{
+	font-family: PT Sans;
+	text-transform: uppercase;
+	font-size: 0.75em;
+	letter-spacing: 3px;
+	text-align: center;
+	background-color: white;
+	border:0;
+	border-radius: 0;
+/*	margin-left: 6em;*/
+	transition: 0.5s;
+	width:100%;
+	height:0.5em;
+	float:left;
+	display: block;
+	margin: 0.25;
+	margin-left:0;
 }
 
 select:focus {
@@ -470,5 +512,10 @@ select:focus {
   	float:left;
   	margin-left: 4.1em;
 }
+
+.drop-down-card{
+	width: 52%;
+}
+
 
 
