fixed placeholder so when the input is being typed, the colour is changed

--- a/css/product.css
+++ b/css/product.css
@@ -402,6 +402,7 @@ select:focus {
 	letter-spacing: 2px;
 	height: 1rem;
 	padding: 0.30rem;
+	color: black;
 	 
 }
 
@@ -511,11 +512,31 @@ select:focus {
   	border: 1px solid #ccc;
   	float:left;
   	margin-left: 4.1em;
+  		margin-bottom: 1em;
 }
 
 .drop-down-card{
 	width: 52%;
 }
 
+input {
+	color: black;
+}
+
+::-webkit-input-placeholder {
+   color: #ccc;
+}
+
+:-moz-placeholder { / Firefox 18- /
+   color: #ccc;  
+}
+
+::-moz-placeholder {  / Firefox 19+ /
+   color: #ccc;  
+}
+
+:-ms-input-placeholder {  
+   color: #ccc;  
+}
 
 
