--- a/css/main1.css
+++ b/css/main1.css
@@ -165,6 +165,7 @@ float:right;
 
 
 	.information-header {
+		font-family: PT Sans;
   		font-size: 1.25rem;
   		text-transform: uppercase;
   		letter-spacing: 3px;
@@ -176,7 +177,14 @@ float:right;
 		font-family: PT Sans;
 	}
 
+
 /*about page*/
+
+	.sub-heading{
+		font-family: PT Sans;
+  		font-size: 1.25rem;
+  		display: block;
+	}
 	#meet-team{
 		height: 2em;
   		background-color: lightgray;
@@ -190,16 +198,11 @@ float:right;
 		max-height: auto;
 	}
 
-	.staff-name{
-		font-family: PT Sans;
-  		font-size: 1.25rem;
-  		display: block;
+	#staff-name{
   		padding-top: 0.5rem;
   		margin: 0;
   		letter-spacing: 2px
 	}
-
-	
 
 	#staff-intro{
 		padding: 0.5rem 2rem;
@@ -218,16 +221,36 @@ float:right;
 		padding:0.5rem;
 	}
 	
-	.event-name {
-		font-family: PT Sans;
-  		font-size: 1.25rem;
-  		display: block;
+	#event-name {
   		padding-top: 0.5rem;
   		padding-bottom: 0.5rem;
   		margin: 0;
   		letter-spacing: 1px;
 	}
 
+	#event-p{
+		padding-top: 1rem;
+		padding-bottom: 0;
+	}
 
-	
+	#event-time{
+		text-align: center;
+		padding: 1rem 10% 0 10%;
+		text-transform: uppercase;
+		margin: 0;
+		display: block;
+	}
+
+	p a {
+		font-family: PT Sans;
+		text-transform: uppercase;
+		font-size: 1.25rem;
+		color:black;
+		text-decoration: underline;
+		margin:0;
+	}
+
+	p a:hover{
+		color: #00ADEF;
+	}
 
