Cleaned up the css code. Made the inbox mobile friendly! :D

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/*HEADER SECTION*/
 header{
 	width:100%;
 	position:fixed;
@@ -19,7 +20,7 @@ nav {
 	float:right;
 }
 
-nav a {
+.head-nav {
 	font-family: PT Sans;
 	text-transform: uppercase;
 	font-weight:700;
@@ -35,43 +36,31 @@ nav a:hover{
 	color: #00ADEF;
 }
 
+.current{
+	color:#00ADEF;
+
+}
+/*END OF HEADER SECTION*/
+
 body{
 	margin: 0;
 	padding: 0;
 }
 
-
+/*BANNER SECTION*/
 .banner{
-/*	no repeat = no tiling for background
-	background: url(css/img/banner-place.png) no-repeat 50% 0 fixed; 
-	width: 100%;
-	height: 600px;
-	overflow: hidden;
-	position: fixed;*/
 	margin-top: 4em;
 }
 
 .banner img{
 	width: 100%;
 }
+/*END OF BANNER SECTION*/
 
-.current{
-	font-family: PT Sans;
-	text-transform: uppercase;
-	font-weight:700;
-	font-size: 1em;
-	letter-spacing: 2px;
-	color:#00ADEF;
-	margin: 1.5em;
-	display: inline-block;
-	text-decoration: none;
-	border-bottom: 1px solid #00ADEF;
-	padding-bottom: 0.25rem;
-}
 
 /*FEATURES SECTION*/
 .features {
-	width: 100%
+	width: 100%;
 	display: block;
 	float:left;
 }
@@ -115,26 +104,57 @@ body{
   opacity:1;
   transition:0.3s;
 }
+/*END OF FEATURES SECTION*/
+
 
 /*EVENTS SECTION*/
 .events {
-	width: 100%
-	display: block;
-	float:left;
-	padding: 0 2.5%;
+	width: 95%;
+	margin: 1em 2.5%;
+}
+.events-all{
+	width: 100%;
 }
 
 .events-grid{
-	width:25%;
+	display: inline-block;
+	width: 33.3333%;
+	height: 10em;
+	float: left;
+}
+
+.events-grid:hover{
+	color:white;
+	opacity: 0.5;
+	transition:0.5s;
+}
+
+.events-grid-first img {
+	width:90%;
+	margin-right:10%;
+}
+
+.events-grid-mid img {
+	width:90%;
+	margin-right:5%;
+	margin-left:5%;
+}
+
+.events-grid-last img {
+	width:90%;
+	margin-right:10%;
+	float:right;
+	margin-right:0;
 }
 
 .events-last {
 float:right;
 
 }
+/*END OF EVENTS SECTION*/
+
 
 /*FOOTER*/
-
 .footer{
   width: 100%;
   height: 100px;
@@ -159,7 +179,7 @@ float:right;
 .footer-img{
 	text-align: center;
 	float: none;
-	margin: 1em 0;
+	margin: 0.5em 0;
 }
 
 .comments{
@@ -168,9 +188,9 @@ float:right;
   letter-spacing: 2px;
   width: 12rem;
   height: 1rem;
-  margin-top: 1px;
-  line-height: 15px;
-  padding: 0.30rem;
+  margin-top: 0.25em;
+/*  line-height: 1em;*/
+  padding: 0.3rem;
 
 }
 
@@ -183,14 +203,13 @@ input:focus {
   list-style: none;
   border: none;
   width: 10%;
-  padding: 0.63em 1em;
+  padding: 0.75em 1em;
   text-align: center;
-  margin: 1em 0;
   font-family: PT Sans;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
-  font-size: 12px;
+  font-size: 0.8em;
   background-color:  #E6E7E8;
   color: white;
   transition:0.5s;
@@ -204,12 +223,16 @@ input:focus {
 	color:white;
 	transition:0.5s;
 }
+/*END OF FOOTER SECTION*/
+
 
 /*MOBILE*/
 @media (max-width: 480px){
 
+	/*HEADER*/
 	header{
 		text-align: center;
+		height:9em;
 	}
 
 	.logo img {
@@ -224,7 +247,7 @@ input:focus {
 
 	}
 
-	nav a{
+	.head-nav{
 		width: 50%;
 		margin: 0;
 		float: left;
@@ -235,11 +258,41 @@ input:focus {
 	nav {
 		float:none;
 	}
+	/* END OF HEADER*/
 
+
+	/*BANNER*/
 	.banner{
 		margin-top: 9em;
 	}
+	/*END OF BANNER*/
 
+
+	/*FEATURES*/
+	.feature-box{
+		width:auto;
+	}
+	/*END OF FEATURES*/
+
+
+	/*EVENTS SECTION*/
+	.events-grid {
+		float:none;
+		display:block;
+		width:90%;
+		margin: 1em 5%;
+		height:auto;
+	}
+
+	.events-grid img {
+		margin:auto 5%;
+		height:auto;
+		width:90%;
+	}
+	/*END EVENTS SECTION*/
+
+
+	/*FOOTER*/
 	.email {
 		margin-bottom:1em;
 	}
@@ -252,13 +305,13 @@ input:focus {
 	}
 
 	.comments{
-	  font-family: PT Sans;
-	  padding: 0.25rem;
-	  text-transform: uppercase;
-	  letter-spacing: 2px;
-	  width: 50%;
-	  margin: 0.25rem;
-}
-
+		font-family: PT Sans;
+		padding: 0.25rem;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		width: 50%;
+		margin: 0.25rem;
+	}
+	/*END OF FOOTER*/
 
 }
